Add global loader

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,11 @@
 svg.star-svg {
   display: inline;
 }
+
+/*loader wrapper*/
+svg.dna-wrapper circle:nth-child(odd) {
+  fill: #075985;
+}
+svg.dna-wrapper circle:nth-child(even) {
+  fill: #0891b2;
+}
